; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-ext/module/extr_jerry-module-test.c_resolve_differently_handled_module.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-ext/module/extr_jerry-module-test.c_resolve_differently_handled_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@jerry_char_t = common dso_local global i32 0, align 4
@name_string = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [27 x i8] c"differently-handled-module\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @resolve_differently_handled_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resolve_differently_handled_module(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @jerry_get_utf8_string_size(i32 %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* @jerry_char_t, align 4
  %10 = load i64, i64* @name_string, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @JERRY_VLA(i32 %9, i64 %10, i32 %11)
  %13 = load i32, i32* %4, align 4
  %14 = load i64, i64* @name_string, align 8
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @jerry_string_to_utf8_char_buffer(i32 %13, i64 %14, i32 %15)
  %17 = load i64, i64* @name_string, align 8
  %18 = inttoptr i64 %17 to i8*
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @strncmp(i8* %18, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %2
  %23 = call i32 @jerry_create_number(i32 29)
  %24 = load i32*, i32** %5, align 8
  store i32 %23, i32* %24, align 4
  store i32 1, i32* %3, align 4
  br label %26

25:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %22
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @jerry_get_utf8_string_size(i32) #1

declare dso_local i32 @JERRY_VLA(i32, i64, i32) #1

declare dso_local i32 @jerry_string_to_utf8_char_buffer(i32, i64, i32) #1

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i32 @jerry_create_number(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
